# Node-Based-Image-Manipulation

./: BrightnessContrastNode.h  CMakeLists.txt  ImageInputNode.h  ImageOutputNode.h  NodeBase.h  README.md  gui.cpp  gui.h  main.cpp  main.py  node_graph.py  ui.py
C++/: BlurNode.h  BrightnessContrastNode.h  ImageInputNode.h  ImageOutputNode.h  Main_gui.cpp  NodeBase.h  app  gui.cpp  main.cpp  node_image_editor.cpp
nodes/: base_node.py  blur_node.py  brightness_node.py  contrast_node.py  edge_node.py  input_node.py  output_node.py  splitter_node.py  threshold_node.py
